--- a/simple calculator.ipynb
+++ b/simple calculator.ipynb
@@ -39,7 +39,7 @@
     "elif op==\"/\":\n",
     "    div=fnum/snum\n",
     "    print(\"The Result is\"+ str(div))\n",
-    "elif op==\"-\":\n",
+    "elif op==\"%\":\n",
     "    rem=fnum%snum\n",
     "    print(\"The Result is\"+ str(rem))"
    ]
